# karta_snov

./: Dockerfile  app.py  deploy.sh  pyproject.toml  robots.txt  sitemap.xml
assets/: styles.css
src/: callbacks.py  common.py  exceptions.py  page.py  text.py
src/services/: azimuth.py  coord_converter.py  distance_and_angle.py  nomenclature_finder.py  road_scheme.py  target_destination.py
